appId: com.keithkurak.pancaketheorypreview
---
- launchApp
- takeScreenshot: '.maestro/screenshots/preview-smoke-1'
- assertVisible: '.*Make it.*'
- tapOn:
    text: ".*Make it.*"
- takeScreenshot: '.maestro/screenshots/preview-smoke-2'
- assertVisible: '.*Fluffy Pancakes.*'